Essay/Code/Full_code/FQHE_SPHERE/core/Hilbertspace/QHFMFermion/Hamiltonian/Hamiltonian.h

//--------------------------------------------------------------------------------------------------------------------
//-------------------------<twobody.c>-------------------------------------------------------------------
//--------------------------------------------------------------------------------------------------------------------

extern "C" size_t twoBodyCount(MKL_INT *indptr, int num_thread);
extern "C" size_t twoBodyGenerate(MKL_INT *indptr, MKL_INT *indices, Data_dtype *data, \
					double *A1_list, double *A12_list, double *cdw, double t, int num_thread);
extern "C" size_t L2Count(MKL_INT *indptr, int num_thread);
extern "C" size_t L2Generate(MKL_INT *indptr, MKL_INT *indices, Data_dtype *data, int num_thread);
//--------------------------------------------------------------------------------------------------------------------
//-------------------------<twobody_Z2.c>-------------------------------------------------------------------
//--------------------------------------------------------------------------------------------------------------------

extern "C" size_t twoBodyZ2Count(MKL_INT *indptr, int num_thread);
extern "C" size_t twoBodyZ2Generate(MKL_INT *indptr, MKL_INT *indices, Data_dtype *data, \
                    double *A1_list, double *A12_list, double t, int num_thread);
//--------------------------------------------------------------------------------------------------------------------
//-------------------------<L2_Z2.c>-------------------------------------------------------------------
//--------------------------------------------------------------------------------------------------------------------

extern "C" size_t L2Z2Count(MKL_INT *indptr, int num_thread);
//--------------------------------------------------------------------------------------------------------------------
//-------------------------<twobody_Z2PH.c>-------------------------------------------------------------------
//--------------------------------------------------------------------------------------------------------------------


extern "C" size_t twoBodyZ2PHCount(MKL_INT *indptr, int num_thread);
extern "C" size_t twoBodyZ2PHGenerate(MKL_INT *indptr, MKL_INT *indices, Data_dtype *data, \
                    double *A1_list, double *A12_list, double t, int sortQ, int num_thread);