Essay/Code/Full_code/FQHE_SPHERE/core/Hilbertspace/QHFMFermion/Basis/Basis.h

int PH(Data_dtype *ket, Data_basis *basis, Data_dtype *out, \
				const hash & hashT, size_t N_e, size_t N_o, size_t dim);
int PH(Data_dtype *ket, Data_basis *basis, Data_dtype *out, \
				const hash & hashT, char* Z2_phase, int Z_2, size_t N_e, size_t N_o, size_t dim);